[package]
name = "oj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
wait-timeout = "0.2"
chrono="0.4"
lazy_static = "1.4"
openssl = "0.10"
openssl-sys = "0.9"
actix-cors="0.7.0"
clap = { version = "4.0", features = ["derive"] }
[dev-dependencies]
assert-json-diff = "2.0.2"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
